# disaster-routing-simulator

./: .gitignore  DataExample.csv  Dockerfile  README.md  pyproject.toml
.github/workflows/: lint-format-type.yml  ruff-format-lint.yml  tests.yml
data/Amager_shortest_3div_60min/: dashboard-1.yaml
data/Amager_shortest_3div_60min/analysis/: people_in_safety.csv
data/Amager_shortest_3div_60min/dijkstra-shortest-path-output/: modules.dot  ph_modestats.csv  pkm_modestats.csv  scorestats.csv  stopwatch.csv  traveldistancestats.csv
data/bbox/: cph_bbox.geojson
data/case_studies/Amager/: dashboard-1.yaml  dashboard-2.yaml  dashboard-3.yaml  dashboard-4.yaml
data/case_studies/Ravenna/: dashboard-1.yaml  dashboard-2.yaml  dashboard-3.yaml  dashboard-4.yaml
data/danger_zones/: bbox_amager.geojson  dangerzone_amager.geojson  dangerzone_amager_more_exits.geojson  dangerzone_lillebitteamager.geojson  mindre_del_af_amager.geojson  ravenna.geojson
data/experiments/: danger_zone_data_Polaris.csv  danger_zone_data_algorithms.csv  danger_zone_data_basis.csv  danger_zone_data_diversifying.csv  danger_zone_data_moreExits.csv  danger_zone_data_population.csv  danger_zone_data_ravenna.csv  danger_zone_data_time.csv  dashboard-11.yaml  dashboard-12.yaml  dashboard-13.yaml  dashboard-14.yaml  dashboard-15.yaml  dashboard-16.yaml  dashboard-17.yaml  fix_csv_files.ipynb  fix_dashboards.ipynb  trip_stats_disaster_Polaris.csv  trip_stats_disaster_algorithms.csv  trip_stats_disaster_basis.csv  trip_stats_disaster_diversifying.csv  trip_stats_disaster_moreExits.csv  trip_stats_disaster_population.csv  trip_stats_disaster_ravenna.csv  trip_stats_disaster_time.csv
data/experiments/Amager_150min_geopop_div3/: dashboard-2.yaml
data/experiments/Amager_180min_geopop_div3/: dashboard-2.yaml
data/experiments/Amager_60min_geopop_div3_basis/: dashboard-2.yaml
data/experiments/Amager_60min_number_div3/: dashboard-2.yaml
data/experiments/Amager_90min_geopop_div3/: dashboard-2.yaml
data/matsim/: .gitignore  config.xml
data/matsim/case_studies/: dashboard-1.yaml  dashboard-2.yaml  dashboard-3.yaml  dashboard-4.yaml  dashboard-5.yaml  dashboard-6.yaml  dashboard-7.yaml  (+1 more)
data/osm_graph/: Ravenna.graphml  save_amagerMoreExits_fastest_origin_to_paths_div_3.pkl
data/population/: CPHpop.geojson  PopulationGeoDataframe.geojson  RavennaPop.geojson  ravennaPopulation.geojson
matsim/: pom.xml
simulator/: pom.xml
src/: config.py  controller.py  input_data.py  interface.py  length-comparison.ipynb  main.py  routes.ipynb  utils.py
src/analysis/: analysis.py  osm_size.py
src/data_loader/: __init__.py  danger_zones.py  osm.py  polaris.py  population.py  sumo.py
src/gui/: __init__.py  constants.py  controller.py  fields.py  helper.py  input_data.py
src/matsim_io/: __init__.py  dashboards.py  scripts.py  writers.py
src/routes/: fastest_path.py  fastestpath.py  polaris.py  route.py  route_algo.py  route_utils.py  routes.py  shortest_path.py  shortestpath.py
src/routing-lib/: setup.py
tests/: conftest.py  test_example.py  test_input_data.py
tests/data_loader/: test___init__.py  test_danger_zones.py  test_osm.py
tests/matsim_io/: test_writers.py
tests/routes/: test_fastest_path.py  test_introduce_departure_times.py  test_polaris.py  test_route_objects.py  test_route_to_safety.py  test_shortest_path.py
(+641 files in other folders)
