[tool.poetry]
name = "disaster-routing-simulator"
version = "0.1.0"
description = ""
authors = [
    "Amalie Bøgild <malleboegild@gmail.com>",
    "Joachim Borup <joachim@borup.com>",
    "Mai Odgaard <odgaardmai@gmail.com>",
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
geopandas = "^1.0.1"
matplotlib = "^3.10.0"
matsim-tools = "^0.0.19"
osmnx = "^2.0.1"
pandas = "^2.2.3"
rasterio = "^1.4.3"
scikit-learn = "^1.6.1"
shapely = "^2.0.7"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pytest = "^8.3.4"
ruff = "^0.9.4"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose --strict-markers"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = ["src"]

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
